2008-10-24 TADA Tadashi <sho@spc.gr.jp>
	* amazon.rb: added "Creator" to author elements.

2008-10-19 TADA Tadashi <sho@spc.gr.jp>
	* release 2.3.1.

2008-10-18 TADA Tadashi <sho@spc.gr.jp>
	* navi_user.rb: added request_method to NaviUserCGI class.

2008-10-17 TADA Tadashi <sho@spc.gr.jp>
	* highlight.rb: compared tag name case insensitive.

2008-09-10 KURODA Hiraku <hiraku at sapporo.email.ne.jp>
	* highlight.rb: enable to work on XHTML mode.

2008-08-26 TADA Tadashi <sho@spc.gr.jp>
	* recent_rss.rb: added a parameter 'show_modified'.

2008-08-20 TADA Tadashi <sho@spc.gr.jp>
	* squeeze.rb: fixed #120, memory leak by nested loading. thanks KURODA Hiraku
	<hiraku at sapporo.email.ne.jp>.
	* squeeze.rb: fixed #122, unsecure operation using with -p option.
	thanks KURODA Hiraku <hiraku at sapporo.email.ne.jp>.
	* squeeze.rb: added --overwrite option.

2008-08-04 TADA Tadashi <sho@spc.gr.jp>
	* category.rb: fixed #82, incompatible of white space of category.

2008-08-03 TADA Tadashi <sho@spc.gr.jp>
	* titile_tag.rb: fixed a bug about no site name in the title.
	* highlight.rb: changed title format to as same as default.

2008-08-01 TADA Tadashi <sho@spc.gr.jp>
	* squeeze.rb: inserted user_navi plugin into the footer.
	* navi_user.rb: added user_agent method into dummy CGI class.

2008-07-21 TADA Tadashi <sho@spc.gr.jp>
	* makerss.rb: fixed error when subtitle was nil.

2008-07-21 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* squeeze.rb: fix #117. thx Kazuhiko.

2008-07-11 TADA Tadashi <sho@spc.gr.jp>
	* title_tag.rb: changed title format to start with day title.

2008-07-10 TADA Tadashi <sho@spc.gr.jp>
	* category.rb: sorted categories in case-insensitive.

2008-07-05 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* category.rb: raise 404 error when bot access to no existent diary.

2008-07-04 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* counter.rb: fix indent.

2008-07-02 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* squeeze.rb: changed module TDiary to TOPLEVEL.
